<resources>
    <string name="app_name">Cartique</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="new_pass">New Password</string>
    <string name="remove_user">Disable user</string>
    <string name="search_menu_title">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_cart">Explore</string>
    <string name="title_complete_form">Complete Registration</string>
    <string name="title_gifts">Paint</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_service_form">Service Booking</string>
    <string name="title_shop">Service</string>
    <string name="title_search">Search</string>
    <string name="title_location">Location</string>
    <string name="title_quotes">Quotes</string>
    <string name="title_calender">Calender</string>
    <string name="title_quotes_details">Quote Details</string>
    <string name="title_records_details">Record Details</string>
    <string name="title_records">Records</string>
    <string name="title_order_status">Track Status</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_terms">Terms and Conditions</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_link_to_register">Not a member? Get registered</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">&lt;&lt; Back</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_accept_dates">Accept Date</string>
    <string name="text_dates_message">Yey! Your Date has been submited\nCheck Notifiction Panel for updates</string>
    <string name="text_schedule_logbook">Scheduled Date for : </string>
    <string name="register_notification">Register Notification</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="google_maps_key">AIzaSyD7bBc0mwjX_y9H76B0rCTqolY36AseFas</string>
    <string name="title_activity_complete_sign_up">CompleteSignUpActivity</string>
    <string name="service_make_error">Please enter Make of car</string>
    <string name="service_model_error">Please enter Model of car</string>
    <string name="service_year_error">Please enter Year of car</string>
    <string name="service_regNo_error">Please enter Reg No of car</string>
    <string name="service_color_error">Please enter Color of car</string>
    <string name="service_decription_error">Please enter Description of the problem</string>
    <string name="action_search">Search</string>
    <string name="action_details">Track Order</string>
    <string name="action_client_profile">Book Service</string>
    <string name="search_hint">Type name…</string>
    <string name="initial_status_msg">finishing up the paper work</string>
    <string name="preparation_status_msg">Preparation vehicle for work</string>
    <string name="inprogess_status_msg">Working on the vehicle</string>
    <string name="finished_status_msg">All work on the vehicle is done, await for collection</string>
    <string name="collection_status_msg">Vehicle is ready for collection</string>
    <string name="collected_status_msg">Vehicle has been collected </string>
    <string name="title_activity_user_profile_full">UserProfileFullActivity</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_intro">IntroActivity</string>
</resources>
